Added: now user can select publishing status when edit/add new catalog.

--- a/application/modules/admin/views/scripts/dms/catalog/edit.phtml
+++ b/application/modules/admin/views/scripts/dms/catalog/edit.phtml
@@ -63,5 +63,5 @@
 	</table>
 	<input type="submit" name="save" id="save" value="Save">
 	<!--<input type="button" name="saveAsDraft" id="saveAsDraft" value="Save as Draft">-->
-	<input type="button" name="savePublish" id="savePublish" value="Save and Publish">
+	<!--input type="button" name="savePublish" id="savePublish" value="Save and Publish"-->
 </form>
