--- a/application/modules/site/views/scripts/pages/details/generic.phtml
+++ b/application/modules/site/views/scripts/pages/details/generic.phtml
@@ -5,9 +5,8 @@
 	<hr>
 	<h3><?echo Kutu_Core_Util::getCatalogAttributeValue($this->catalogGuid, 'fixedTitle')?></h3>
 	<h3><?echo Kutu_Core_Util::getCatalogAttributeValue($this->catalogGuid, 'fixedSubTitle')?></h3>
-	<h4 class="alt"><?echo $this->row->modifiedDate?></h4>
 	<?echo Kutu_Core_Util::getCatalogAttributeValue($this->catalogGuid, 'fixedContent')?>
-	<br>&nbsp;
+	<h4 class="alt">[Last update: <?echo $this->row->modifiedDate?>]</h4>
 	<?echo $this->action('document','pages_component','site',array("g"=>$this->catalogGuid));?>
 </div>
 <div class="span-9 append-1 last">
