-add notes for payment confirmation (view and mail) -camelCase for Order model -set mailer using default mailer -added function log, in mailer due to issue in checking mail server at local server

--- a/application/modules/admin/views/scripts/store/payconfirm.phtml
+++ b/application/modules/admin/views/scripts/store/payconfirm.phtml
@@ -112,12 +112,13 @@ if($rowConfirm->confirmed == 0){
 <hr>
 <?$i++; endforeach;?>
 </fieldset>
+<fieldset>
 <div class="span-23" align="center">
 <a class="success" href="<? echo $this->url(array('controller'=>'store', 
-            'action'=>'payconfirmyes', 'id'=>$this->idOrder));?>">
+            'action'=>'payconfirmyes', 'id'=>$this->idOrder));?>" onClick="notesForm.submit();">
             Accept [Confirm] </a>&nbsp;  
 <a class="error" href="<? echo $this->url(array('controller'=>'store', 
-            'action'=>'payconfirmno', 'method'=>$row->paymentMethod, 'id'=>$this->idOrder ));?>">Reject </a> &nbsp;
+            'action'=>'payconfirmno', 'method'=>$row->paymentMethod, 'id'=>$this->idOrder ));?>" onClick="notesForm.submit();">Reject </a> &nbsp;
 <a class="notice" href="#" onClick="javascript:history.back();">Back</a>
 </div>
 </form>
