--- a/application/modules/site/views/scripts/store/payment/detail.phtml
+++ b/application/modules/site/views/scripts/store/payment/detail.phtml
@@ -11,7 +11,7 @@
 	<a href="<? echo KUTU_ROOT_URL;?>/site/store_payment/document">Documents</a>
 </div>
 <hr />
-<fieldset><legend>ORDER </legend>
+<fieldset><legend>ORDERs </legend>
 <? foreach($this->listOrder as $value): ?>
  <div class="span-5"><strong>OrderID </strong> </div><div class="span-6"> <?=$value['orderId'];  ?> &nbsp; </div>
     <div class="span-5 last"><strong>Invoice </strong></div><div class="span-6"> <?=$value['invoiceNumber'];  ?> &nbsp; </div>
