--- a/application/modules/site/views/scripts/store/payment/index.phtml
+++ b/application/modules/site/views/scripts/store/payment/index.phtml
@@ -3,7 +3,7 @@
 		<h2 class="alt">Postpaid Credit Limit Details</h2>
 		<hr>
 		<h3></h3>
-		<fieldset><legend>Postpaid</legend>
+		<legend>Postpaid</legend>
 			<form method="post" action="../../postpaid">
 				<div class="span-5">Total Postpaid Limit</div> 
 				<div class="span-5" align="right"><?=$this->limit;?></div>
